# python-dev-tips

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  HATCHLING_pyproject.toml  LICENSE  OLD_setup.py  README.md  README.rst  environment.yml  pyproject.toml  setup.py
.github/workflows/: poetry.yml  python.yml  setuptools.yml
docs/: requirements.txt
docs/source/: badges.rst  clean_code.rst  code_formatting.rst  conf.py  documentation.rst  fftconvolve.rst  index.rst  packaging.rst  remote_development.rst  reproducible.rst  testing.rst  utils.rst  version_control.rst  virtual_env.rst
examples/: create_huggingface_dataset.py  cupy_fft.py  hydra_instantiate.py  joblib_example.py  joblib_parallel.py  numpy_speedup.py  numpy_speedup_examples.py  real_convolve.py  use_huggingface_dataset.py
examples/configs/: defaults.yaml  exp1.yaml  hf_dataset.yaml  instantiate.yaml
examples/configs/array/: ExampleArange.yaml  ExampleNumpy.yaml  ExampleZeros.yaml
examples/configs/array/transform/: power.yaml
examples/configs/signal/: ExampleCustom.yaml  ExampleNumpy.yaml  ExampleZeros.yaml
examples/configs/signal/transform/: power.yaml
notebooks/: real_fft.ipynb
profile/: fftconvolve.py
pydevtips/: fftconvolve.py  utils.py
tests/: test_fftconvolve.py
